deplyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-deployment-2
  namespace: java
  labels:
    app: springboot-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot-app
  template:
    metadata:
      labels:
        app: springboot-app
    spec:
      containers:
        - name: springboot-container
          image: isurupathumherath/cloudev_java:v5.0
          ports:
          - containerPort: 8080  
      imagePullSecrets:
        - name: artifact-registry-secret
