service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: devops-tools
  labels:
    app: jenkins-server
spec:
  selector:
    app: jenkins-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
