virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: springboot-app
  namespace: java
spec:
  hosts:
  - "*"
  gateways:
  - default/springboot-gateway
  http:
  - match:
    - uri:
        prefix: /hello-world
    route:
    - destination:
        host: springboot-app
        port:
          number: 80
